--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
         <artifactId>log4j</artifactId>
         <version>1.2.17</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+    <dependency>
+        <groupId>com.aventstack</groupId>
+        <artifactId>extentreports</artifactId>
+        <version>5.0.3</version>
+    </dependency>
 
 </dependencies>
     <properties>
